<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GooTool</string>
    <string name="app_label">World Of Goo Module Manager</string>
    <string name="app_osl">Open Source Licences</string>
    <string name="action_about">About</string>
    <string name="action_donate">Donate</string>
    <string name="action_settings">Settings</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_delete">Delete selected</string>
    <string name="about_source_label">Source</string>
    <string name="about_changes_label">Changes Log</string>
    <string name="nav_modlist">Module</string>
    <string name="nav_support">Support</string>
    <string name="nav_download">Download</string>
    <string name="about_developer">Main Developer</string>
    <string name="about_developer_label">MeowCat Studio - MlgmXyysd</string>
    <string name="btn_add">Add</string>
    <string name="add">Select a module File to add</string>
    <string name="managernotfound">Please install a File Manager.</string>
    <string name="exit">Press back again to exit.</string>
    <string name="deleted">Deleted selected goomods. Don\'t forget to save changes.</string>
    <string name="delete_select">Click on module\'s name to select</string>
    <string name="cantopen">Couldn\'t open file.</string>
    <string name="invaild">Invalid module file.</string>
    <string name="readerror">File read error.</string>
    <string name="added">Addin already added.</string>
    <string name="goomodadded">Successfully added module. Don\'t forget to save changes.</string>
    <string name="crash">Sorry,the application crash has stopped unexpectedly.</string>
    <string name="generating">Generating modded APK (progress bar not implemented yet)</string>
    <string name="signing">Signing modded APK</string>
    <string name="grantpermissions_1">GooTool need your permission granted to use the Storage, otherwise will not be able to continue to use.</string>
    <string name="grantpermissions_2">To continue to use GooTool you must permissions granted to use the Storage, please click on the [Grant] and give corresponding privileges in a pop-up window.</string>
    <string name="grantpermissions_3">GooTool need you granted permission to continue to use the Storage, please go to [Settings - Apps - World of Goo Module Manager - Permissions] to open the corresponding permissions.</string>
    <string name="grantpermissions_btn_1">Cancel</string>
    <string name="grantpermissions_btn_2">Continue</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">GooTool for Android.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="btn_save">Save</string>
    <string name="btn_install">Install</string>
    <string name="btn_changeorder">Change Order</string>
    <string name="btn_done">Done</string>
    <string name="app_version_desc">Version:</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
